# T212-portfolio-analytics

./: .gitignore  Cargo.toml  LICENSE  README.md  requirements.txt  rust-toolchain.toml  stock_info.py
.github/workflows/: rust.yml
data/: symbol_mapper.json
demo_data/: demo_instruments.json  demo_positions.json  output.json
src/: filters.rs  lib.rs  main.rs  stock_info.py  webui.rs
src/models/: dividend.rs  mod.rs  portfolio.rs
src/services/: exchange_rate.rs  mod.rs  orchestrator.rs  trading212.rs  yahoo_finance.rs
src/utils/: currency.rs  mod.rs  settings.rs  symbol_mapper.rs
templates/: dividends.html  dividends1.html  payout.html  portfolio.html  settings.html
