[package]
name = "t212_portfolio_analytics"
version = "0.1.0"
edition = "2021"
 
[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
anyhow = "1.0.98"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.73"
thiserror = "1.0"
log = "0.4.27"
env_logger = "0.11.8"
futures = "0.3"
once_cell = "1.21.3"
regex = "1.11.1"
askama = "0.14.0"
prettytable = "0.10.0"
axum = "0.6.20"
hyper = "1.6.0"
csv = "1.3"
openssl-sys = { version = "0.9", features = ["vendored"] }

[target.aarch64-unknown-linux-musl]
image = "ghcr.io/cross-rs/aarch64-unknown-linux-musl:main"
